# autoclick

./: .gitignore  AutoClick.spec  README.md  build_installer.bat  cadastro-de-produtps.flow  config.json  flow.flow  flow_builder_pro.py  installer.iss  pyproject.toml
autoclick.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bkp/: cadastro-de-produtps.flow  teste.flow
connectors/: api.py  database.py
core/: __init__.py  automation.py  i18n_helper.py  payload.py
domains/: subdomains.json
locales/: en.json  pt.json
models/: __init__.py  connection.py  node.py
ui/: canvas_interactions.py  canvas_panel.py  connection_dialogs.py  connections_tab.py  coordinate_capture.py  left_panel.py  menu_bar.py  node_config_window.py  properties_panel.py  start_screen.py  tray_icon.py
